k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-eks-demo
  labels:
    app: devops-eks-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devops-eks-demo
  template:
    metadata:
      labels:
        app: devops-eks-demo
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - devops-eks-demo
                topologyKey: "kubernetes.io/hostname"
      containers:
        - name: devops-eks-demo
          image: ECR_IMAGE_URI:TAG
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
